--- a/stylesheet.html
+++ b/stylesheet.html
@@ -1,54 +1,42 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+     <title>REGISTRATION FORM</title>
+    <link rel="stylesheet" href="stylee.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 </head>
-
 <body>
-    <div class="profile">
-        <img src="https://media.licdn.com/dms/image/v2/D5603AQG6ZCQuQFiMJg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1725127041598?e=1742428800&v=beta&t=vtOU2_gKzn-CSBXkaeLrAtdaYPgM6FzOGVjlRjeFtQs" class="image" />
-        <h1 class="heading">Asif Shaik <br />
-            </h1>
-        <a href="#bioSection">Bio</a>
+    <div class="container">
+    <div class="row">
+    <div class="col-md-10 offset=md-1">
+    <div class="row">
+    <div class="col-md-5 register-left">
+     <h2>JOIN US</h2>
+    <p>Join Us To Learn Web Development Through HTML,CSS,JS</p>
+    <button type="button" class="btn btn-primary">About us</button>
     </div>
-    <div class="Education">
-        <h1 class="heading">Education</h1>
-        <ul>
-            <li>B.Tech(2nd Year)</li>
-            <li>Intermediate(Completed)</li>
-            <li>SSC(Completed)</li>
-        </ul>
+    <div class="col-md-7 register-right">
+        <h2>Register Here </h2>
+    <div class="register-form">
+         <div class="form-group">
+            <input type="text" class="form-control" placeholder="Name">
+    </div> 
+       <div class="form-group">
+        <input type="text" class="form-control" placeholder="UserName">
+     </div> 
+     <div class="form-group">
+      <input type="email" class="form-control" placeholder="Email">
+     </div>   
+        <div class="form-group">
+            <input type="password" class="form-control" placeholder="Password">
+       </div> 
+       <button type="button" class="btn btn-primary">Register</button>
     </div>
-    <div class="bio" id="bioSection">
-        <h1 class="heading">Bio</h1>
-        <p>
-            I am from Kadapa district.Now I am pursuing B.tech in vizag in Anil Neerukonda Institute Of Technology & Sciences(ANITS).
-
-        </p>
-        <p>
-            I am a 20-year-old B.Tech student currently in second year, pursuing a degree in Information Technology(IT). I am interested to develop foundational skills in front-end development, having completed a basic HTML course from Great Learning Academy. My technical journey reflects a strong interest in web design, with a particular enthusiasm for CSS, which allows to experiment with styling and design elements.
-
-        </p>
-        <p>
-        <h2> percentage</h2>
-        <ul>
-            <li>B.Tech 85%(1st Year)</li>
-            <li>Intermediate (90%)</li>
-            <li>SSC(98%)</li>
-        </ul>
-        </p>
-        <h3>Hobbies</h3>
-        <ul>
-            <li>Reading News</li>
-            <li>Watching Movies</li>
-            <li>Helping Others</li>
-        </ul>
-        My linkdedin Profile <a href="linkedin.com/in/shaikasif2">My LinkedIn</a>
-    </div>
+    </div>       
+     </div>
+     </div>
+     </div>
+     </div>
+     <script src="shaik.js">hiiii</script>
 </body>
-
 </html>
